--- a/calender-assingment/11-10-2021/assets/css/style.css
+++ b/calender-assingment/11-10-2021/assets/css/style.css
@@ -1,19 +1,21 @@
-* {
+*{
 	margin: 0px;
-	padding; 0px;
+	padding: 0px;
 }
 body{
-	width: 1350px;
-	
+	width: 1300px;
+	padding: 20px 0px 0px 65px;
 }
-table{
+table {
 	width: 100%;
-	padding: 20px 0px 0px 30px;
-	border-collapse: collapse;
-	border: 2px solid #8E5448;
+}
+/**thead section start here**/
+.table-wrapper{
+	margin-top: 10px;
 }
 .header-image{
-	width: 100%;	
+	width: 99%;
+	
 }
 .month-name{
 	font-size:60px;
@@ -30,6 +32,8 @@ table{
 	width: 17%;
 	background-color: #FBB7C1;
 	text-align: center;
+	color: #530101;
+	font-weight: bold;
 }
 .heading{
 	width:35%;
@@ -41,17 +45,27 @@ table{
 .aside{
 	width:18%;
 }
+/**thead section end here**/
+
+/**tbody section start here**/
+
 .week{
   width: 8%;
-  height: 205px;
   text-align: center;
-  font-size: 105px;
+  font-size: 88px;
   font-weight: 100;
-  background-color: #536FCA;
+  background-color: #1F3483;
   color:#fff;
+  border-top: 2px solid #ffffff;
+  vertical-align: bottom;
 }
 .days{
 	width: 16%;
+	padding: 0px;
+	border: 2px solid maroon;
+	vertical-align: top;
+	padding-top: 7px;
+	border-spacing: 20px 20px ;
 }
 .weekend{
   width: 8%;
@@ -61,6 +75,8 @@ table{
   font-weight: 100;
   background-color:#E1403D;
   color: #fff;
+  vertical-align:bottom;
+  border-bottom: 1px solid #fff:
 }
 .ganesh-img{
 	height:214px;
@@ -69,15 +85,28 @@ table{
 }
 .advertisement {
 	margin: 2px;
-	height: 411px;
+	height: 415px;
 }
 .days-heading{
-	font-size:110px;
+	font-size:125px;
 	vertical-align: bottom;
 	margin-top: 5px;
 	text-align: right;
 	font-weight: 100;
 	color:#293C8A;
+	margin-right: 18px;
+	font-weight: bold;
+	letter-spacing: -12px;
+}
+.highlight{
+	background-color:#FBDBF7;
+}
+.highlight1{
+	background-color: #FFFCCB;
+}
+.highlight2{
+	background-color: #DDFFFF;
+	
 }
 .text{
 	color: #4885A5;
@@ -85,10 +114,92 @@ table{
 	font-size: 20px;
 	margin-left: 5px;
 }
+.note{
+	font-size: 20px;
+	font-size: 23px;
+    color: #000;
+    font-weight: bold;
+	margin-top: 46px;
+	background-color: #7E716C;
+	padding:5px 5px;
+	
+}
 .marathi-month{
 	font-weight: bold; 
 	font-size: 15px;
 	margin-left: 5px;
 }
+.aside-heading{
+	text-align: center;
+	font-size: 95px;
+	font-weight: 100;
+	background-color: #F6F524;
+	margin-right: 5px;
+	color: #3D603D;
+	font-weight: bold;
+}
+/**tbody section end here**/
 
-
+/**tfoot section start here**/
+.tfoot-advertisemen{
+	width: 100%;
+	margin-top: 10px;
+}
+.holiday-color{
+	color: red;
+} 
+.aside-section{
+	vertical-align: baseline;
+}
+.aside-items{
+	list-style: none;
+	text-align: right;
+    margin-top: 16px;
+}
+.aside-items-wrapper{
+	margin:5px;
+	background-color: #FDA944;
+	font-size: 13px;
+	padding:10px;
+}
+.inner-table-heading{
+	text-align: center;
+    background-color: #ED3A29;
+    padding: 4px;
+    font-size: 20px;
+    color: #FCA13F;
+    font-weight: bolder;
+}
+.price{
+	text-align: center;
+    font-size: 26px;
+    color: red;
+    font-weight: bold;
+    background-color: #FCDA1B;
+    padding-top: 5px;
+	margin-left: 3px;
+	width: 95%;
+}
+.inner-table{
+	background-color: #F9FA9F;
+	margin-top: 4px;	
+	margin-left: 3px;
+	width: 95%;
+}
+.inner-table-week-heading{
+	color: #3B7B5A;
+	height:26px;
+	font-weight: bold;
+	text-align: center;
+}
+.inner-table-days-heading{
+	color: #3B7B5A;
+	height:26px;
+	font-weight: bold;
+	text-align: right;
+	width: 23%;
+}
+.inner-holiday-color{
+	color: red;
+}
+/**tfoot section end here**/
