--- a/calender-assignment-using-div/assets/css/style.css
+++ b/calender-assignment-using-div/assets/css/style.css
@@ -1,7 +1,8 @@
-* {
+*{
   margin: 0px;
   padding: 0px;
 }
+
 @font-face {
   src: url("../fonts/Yantramanav-Regular.ttf");
   font-family: mukta;
@@ -10,11 +11,13 @@
 
 body {
   font-family: mukta;
+  padding-top:40px;
 }
 
 .main-wrapper {
-  width: 1200px;
+  width: 1400px;
   margin: 0 auto;
+  
 }
 /**thead section start here**/
 
@@ -35,13 +38,13 @@ body {
   display: table-cell;
   font-size: 30px;
   table-layout: fixed;
-  width: 45%;
+  width: 41%;
   vertical-align: middle;
   text-align: center;
 }
 .heading {
   background-color: #cebe3f;
-  padding: 10px;
+  padding: 10px 5px 10px 5px;
   color: #2d3f79;
 }
 .marathi-month {
@@ -61,10 +64,25 @@ body {
 .wish-text {
   display: table-cell;
   table-layout: fixed;
-  width: 33%;
+  width: 34%;
   font-size: 35px;
   text-align: center;
   vertical-align: middle;
+}
+.days-rowspan{
+	position: absolute;
+	border-left: 1px solid #000000;
+	padding:5px;
+}
+.days-aside-rowspan{
+	background-color: #F09E3A;
+	position: absolute;
+	border: 1px solid #000000;
+	width: 94px;
+}
+.fenolex-pipe-image{
+	margin-top: 12px;
+	height: 424px;
 }
 .wish-text-heading {
   font-weight: 100;
@@ -81,11 +99,12 @@ body {
 }
 .aside-heading {
   display: table-cell;
-  padding: 0px 32px 0px 32px;
+  padding: 0px 36px 0px 34px;
   font-size: 80px;
   background-color: #f6f524;
   color: #335d3f;
 }
+
 /**thead section end here**/
 
 /**tbody section start here**/
@@ -105,6 +124,11 @@ body {
   color: #ffffff;
   border-right: 3px solid #ffffff;
 }
+.week-heading{
+	font-size: 75px;
+	font-weight: 100;
+}
+
 .weekend {
   background-color: #e64542;
   color: #ffffff;
@@ -114,13 +138,18 @@ body {
   table-layout: fixed;
   width: 17%;
   text-align: right;
-  border-right: 1px solid #641e18;
-  border-top: 1px solid #641e18;
   border-left: 1px solid #641e18;
   border-bottom: 1px solid #641e18;
-  padding: 3px 16px 0px 6px;
+  padding: 7px 10px 0px 11px;
   color: #28429f;
 }
+.border-right{
+	border-right: 1px solid #641e18;
+}
+.border-top{
+	border-top: 1px solid #641e18;
+}
+
 .highlight1 {
   background-color: #fce0fc;
 }
@@ -145,6 +174,7 @@ body {
 .inner-days-heading {
   font-size: 120px;
   vertical-align: bottom;
+  letter-spacing: 4px;
 }
 .inner-month-heading {
   display: block;
@@ -167,15 +197,13 @@ body {
   vertical-align: top;
 }
 .days-aside {
-  background-color: #f9a33c;
-  border-bottom: 1px solid #f9a33c;
-  padding-right: 2px;
+  padding-right: 7px;
   color: #2b8140;
-  padding-left: 1px;
-  width: 92%;
+  padding-left: 5px;
   margin-left: 5px;
   display: block;
-  padding-top: 11px;
+  padding-top: 7px;
+  border: none;
 }
 .note {
   font-size: 25px;
@@ -195,10 +223,10 @@ body {
 /** aside section start here**/
 
 .aside-items {
-  margin-bottom: 21px;
+  margin-bottom: 20px;
   font-weight: bold;
   margin-left: 5px;
-  font-size: 13px;
+  font-size: 15px;
   text-align: right;
   margin-right: 5px;
 }
@@ -214,22 +242,32 @@ body {
   border-left: 1px solid #641e18;
   table-layout: fixed;
   display: table-cell;
+  width: 10px;
+   color: #35AC96;
+  font-weight: bold;
 }
 .aside-week-heading {
-  font-size: 11px;
-  padding: 3px;
+	font-size: 12px;
+    padding: 4px;
+    width: 6px;
+	font-weight: bold;
 }
 .aside-days-table-cell {
   table-layout: fixed;
   display: table-cell;
   border-right: 1px solid #641e18;
   border-bottom: 1px solid #641e18;
-  width: 15%;
+  width: 10px;
+  padding: 2px 8px 5px 0px;
+  font-size: 13px;
+  color: #35AC96;
+  font-weight: bold;
 }
 .aside-days-heading {
-  font-size: 9px;
-  padding: 8px 5px 0px 3px;
-  width: 21%;
+  font-size: 13px;
+  padding: 4px 5px 1px 4px;
+  width: 0px;
+ 
 }
 .aside-table-heading {
   border: 1px solid #000000;
